# Hachimi-Edge

./: .gitignore  Cargo.toml  README-zh_cn.md  README-zh_tw.md  README.md  build.rs  mods_usage_example.md  patch.sh
.github/workflows/: build-ios.yml  build_ios.yml  create_release.yml
assets/locales/: en.yml  es.yml  fil.yml  id.yml  pt-br.yml  vi.yml  zh-cn.yml  zh-tw.yml
src/: lib.rs
src/android/: dex_bridge.rs  hachimi_impl.rs  log_impl.rs  main.rs  mod.rs  plugin_loader.rs  utils.rs
src/android/gui_impl/: input_hook.rs  keymap.rs  render_hook.rs
src/android/zygisk/: main.rs
src/core/: captions.rs  criware.rs  error.rs  game.rs  gui.rs  hachimi.rs  http.rs  interceptor.rs  ipc.rs  live_utils.rs  log.rs  mod.rs  plugin_api.rs  sugoi_client.rs  taskbar.rs  template.rs  tl_repo.rs  updater.rs  utils.rs
src/il2cpp/: api.rs  ext.rs  mod.rs  sql.rs  symbols.rs  types.rs  utils.rs
src/il2cpp/hook/: mod.rs
src/il2cpp/hook/CriMw_CriWare_Runtime/: CriAtomExAcb.rs  CriAtomExPlayer.rs  CriAtomSourceBase.rs  mod.rs
src/il2cpp/hook/Cute_Cri_Assembly/: AtomSourceEx.rs  AudioControllerBase.rs  CuteAudioSource.rs  CuteAudioSourcePool.rs  mod.rs
src/il2cpp/hook/Gallop_HttpHelper/: Gallop_HttpHelper.rs  mod.rs
src/il2cpp/hook/UnityEngine_AssetBundleModule/: AssetBundle.rs
src/il2cpp/hook/UnityEngine_CoreModule/: Application.rs  Behaviour.rs  Camera.rs  Component.rs  GameObject.rs  Object.rs  RectOffset.rs  RectTransform.rs  Resources.rs  Scene.rs  SceneManager.rs  Texture.rs  Texture2D.rs  TouchScreenKeyboard.rs  TouchScreenKeyboardType.rs  Transform.rs  UnityAction.rs  mod.rs
src/il2cpp/hook/UnityEngine_ImageConversionModule/: ImageConversion.rs
src/il2cpp/hook/UnityEngine_InputLegacyModule/: Input.rs  mod.rs
src/il2cpp/hook/UnityEngine_Rendering/: ScriptableRenderer.rs  mod.rs
src/il2cpp/hook/UnityEngine_TextRenderingModule/: TextGenerator.rs  TextMesh.rs  mod.rs
src/il2cpp/hook/UnityEngine_UI/: CanvasScaler.rs  ContentSizeFitter.rs  EventSystem.rs  HorizontalOrVerticalLayoutGroup.rs  Image.rs  LayoutElement.rs  LayoutGroup.rs  LayoutRebuilder.rs  Text.rs  VerticalLayoutGroup.rs  mod.rs
src/il2cpp/hook/UnityEngine_UIModule/: CanvasGroup.rs  mod.rs
src/il2cpp/hook/Unity_RenderPipelines_Universal_Runtime/: ScriptableRenderer.rs
src/il2cpp/hook/umamusume/: ApplicationSettingSaveLoader.rs  (+67 more)
src/ios/: game_impl.rs  gui_impl.rs  hachimi_impl.rs  hook.rs  input_hook.rs  interceptor_impl.rs  log_impl.rs  main.rs  mod.rs  plugin_loader.rs  symbols_impl.rs  utils.rs
src/ios/gui_impl/: input_hook.rs  metal_painter.rs  mod.rs  render_hook.rs
src/windows/: discord.rs  game_impl.rs  hachimi_impl.rs  hook.rs  log_impl.rs  main.rs  mod.rs  smtc.rs  symbols_impl.rs  taskbar.rs  updater.rs  utils.rs  wnd_hook.rs
src/windows/gui_impl/: d3d11_painter.rs  input.rs  render_hook.rs
src/windows/proxy/: exports.def  mod.rs  unityplayer.rs
tools/android/: build.sh  build_mini.sh  build_zygisk.sh
(+23 files in other folders)
